--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-HOST = localhost
-DATABASE = hotel_management
-USER = root
-PASSWORD = root
+HOST=localhost
+PORT=3306
+DATABASE =hotel_management
+USER=root
+PASSWORD=root
